# TBXTools

./: .gitignore  README.md  pyproject.toml  setup.py  test.py
TBXTools/: __init__.py
TBXTools/candidate_extractor/: __init__.py  default_candidate_extractor.py  statistical.py
TBXTools/core/: __init__.py  terminology_extractor.py
TBXTools/preprocessor/: __init__.py  custom_preprocessor.py  default_preprocessor.py
TBXTools/sqlite/: __init__.py  sqlite.py
TBXTools/sqlite_manager/: __init__.py  sqlite_manager.py
TBXTools_2/: medicina.txt  test_run.py
TBXTools_2/core/: __init__.py  improvements.py  sqlmanager.py  statistical_extractor.py
TBXTools_2/term_extractor/: __init__.py  terminology_extractor.py
old/: TBXTools_old.py
src/TBXTools/: __init__.py
src/TBXTools/_core/: extractor.py
src/TBXTools/_preprocessor/: preprocessor.py
src/TBXTools/_processor/: bert.py  processor.py
src/TBXTools/_resources/: resources.py
src/TBXTools/_results/: results.py
src/TBXTools/_sqlite/: sqlite.py
tests/: Mental_disorder.txt  add_stopwords_test.py  bert_dret.py  bert_hp_tuning_test.py  bert_hpt_cat.py  bert_test.py  bert_train_lemm_test.py  bert_train_test.py  case_test.py  clean_iate.py  lemmatize_test.py  linguistic_test.py  nest_test.py  new_linguistic_test.py  new_statistical_test.py  prove_multilingue.py  regex_exclusion_test.py  regexps.txt  resources_test.py  statistical_test.py  test.py  test_different_languages.py  test_linguistic_patterns.py  test_new_languages.py  test_tutorial_stat.py  text_regex_ca.py  transformers_error.py
(+68 files in other folders)
