[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "tbxtools-beta"
version = "0.4.0"
requires-python = ">= 3.11"
dependencies = [
    "nltk",
    "pycountry",
    "transformers",
    "accelerate",
    "pytorch",
    "pandas",
    "openpyxl,
    "spacy",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"