[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "tbxtools-beta"
version = "0.5.0"
requires-python = "==3.11.*"
dependencies = [
    "nltk",
    "spacy",
    "pandas",
    "pycountry",
    "openpyxl"
]

[project.optional-dependencies]

bert = [
    "scikit-learn",
    "transformers",
    "accelerate",
    "torch",
    "datasets",
    "optuna"
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"
